--- a/flaskapp/flask_dealsonwheels/templates/models.html
+++ b/flaskapp/flask_dealsonwheels/templates/models.html
@@ -41,7 +41,7 @@
         </div>
             <div class="form-group col-lg-3">
                 <div class="form-group">
-                    <label for="input_make"><h2>{{input_make}}</h2></label><br>
+                    <label for="input_make"><h2>{{make_name}}</h2></label><br>
             <div class="form-group col-lg-3">
                 <div class="form-group">
                 {{dropdown_html|safe}}
