Started modeling car prices

--- a/flaskapp/flask_dealsonwheels/templates/models.html
+++ b/flaskapp/flask_dealsonwheels/templates/models.html
@@ -39,11 +39,23 @@
         <h1>Deals On Wheels</h1>
         <h6>Let the market show you how to buy a better car</h6>
         </div>
+            <form action="/output" method="GET">
             <div class="form-group col-lg-3">
                 <div class="form-group">
+                
+                
                     <label for="input_make"><h2>{{make_name}}</h2></label><br>
+            
+      <!--        <form action="/models" method="GET">   -->
             <div class="form-group col-lg-3">
                 <div class="form-group">
+                
+                                
+      <!--          <label for="input_model"><h2>Model</h2></label><br> -->
+      <!--              <select id="input_model" name="input_model"> -->
+
+
+
                 {{dropdown_html|safe}}
                 </div>
             </div>
