--- a/flaskapp/flask_dealsonwheels/templates/output.html
+++ b/flaskapp/flask_dealsonwheels/templates/output.html
@@ -1,116 +1,107 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
- <head>
-   <meta charset="utf-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="description" content="">
-   <meta name="author" content="">
-   <link rel="icon" href="../../favicon.ico">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-   <title>Starter Template for Bootstrap</title>
+    <title>LocalType</title>
 
-   <!-- Bootstrap core CSS -->
-   <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-   <!-- Custom styles for this template -->
-   <link href="../static/css/starter-template.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="../static/css/starter-template.css" rel="stylesheet">
+</head>
 
-   <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-   <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-   <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
-   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-   <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-
-   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-   <!--[if lt IE 9]>
-     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-   <![endif]-->
- </head>
-
- <body>
-
-   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-     <div class="container">
-       <div class="navbar-header">
-         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-           <span class="sr-only">Toggle navigation</span>
-           <span class="icon-bar"></span>
-           <span class="icon-bar"></span>
-           <span class="icon-bar"></span>
-         </button>
-         <a class="navbar-brand" href="#">Project name</a>
-       </div>
-       <div class="collapse navbar-collapse">
-         <ul class="nav navbar-nav">
-           <li class="active"><a href="#">Home</a></li>
-           <li><a href="#about">About</a></li>
-           <li><a href="#contact">Contact</a></li>
-         </ul>
-       </div><!--/.nav-collapse -->
-     </div>
-   </div>
-<br><br>
-
-<div class="container">
+<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" href="#">LocalType</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/about">About</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<main role="main" class="container">
     <div class="starter-template">
-        <h2>Output Page</h2>
-        <p>Enter some user input</p>
+        <h1>Deals On Wheels</h1>
+        <h6>Let the market show you how to buy a better car</h6>
+    </div>
+    <form action="/output" method="GET">
+        <div class="row justify-content-center">
+            <div class="col-lg-5">
+                <div class="form-group">
+                    <label for="input_text"><h2>Insert plot below</h2></label><br>
+                    <textarea style="width:350px;height:200px;" id="input_text" name='input_text'
+                              placeholder=Text>{{input_text}}</textarea>
+                </div>
+            </div>
+            <div class="col-lg-5">
+                <div class="form-group">
+                    <label for="input_city"><h2>Choose a location</h2></label><br>
+                    {{dropdown_html|safe}}
+                </div>
+            </div>
+            <div class="col-lg-2 align-self-center">
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary btn-lg">Analyze!</button>
+                </div>
+            </div>
+        </div>
+    </form>
+
+    <div class="row justify-content-around">
+        <div class="col-lg-6">
+            <h2>Overall Score: {{score|safe}}</h2>
+            <h3>Text Review</h3>
+            <div style="word-wrap:break-word; width:340px">
+                {{color_text|safe}}
+            </div>
+            <h3>Suggested Synonyms</h3>
+            <div style="word-wrap:break-word; width:340px">
+                <table class='table table-hover'>
+                    {{synonyms|safe}}
+                </table>
+            </div>
+        </div>
+        <div class="col-lg-3">
+            <h2>Influential Words</h2>
+            {{top_words|safe}}
+        </div>
+        <div class="col-lg-3">
+            <h2>Top Matching Cities</h2>
+            {{top_cities|safe}}
+        </div>
     </div>
 
-    <div class = "container">
-
-      <form  action="/output" method="GET">
-        <div class="form-group">
-          <label for="birth_month">Birth Month:</label>
-          <input type="text" id="birth_month" name='birth_month' placeholder="e.g. ">
-        </div>
-        <div>
-          <button type="submit" class="btn btn-default btn-lg">Find these Cesareans!</button>
-        </div>
-      </form>
-    </div>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
+</main><!-- /.container -->
 
-  </div> <!-- /.container-->
-
-    <div class="container">
-      <div class="starter-template">
-        <h3>Results:</h3>
-        <p class="lead">Below is the result of your query.<br> You just took user input and looked up the information. Now we need to expand the functionality!</p>
-      </div>
-
-      <table class="table table-hover">
-      <tr><th>index</th><th>Attendant</th><th>Birth Month</th></tr>
-      {% for birth in births %}
-      <tr><td>{{ birth['index'] }}</td><td>{{ birth['attendant']}}</td><td> {{ birth['birth_month'] }}</td></tr>
-      {% endfor %}
-      </table>
-
-
-     </div><!-- /.container -->
-
-    <div class="container">
-      <div class="starter-template">
-        <h3>Another Result:</h3>
-        <p class="lead">Now we've taken the input and called a function from your package.<br>The result is {{the_result}}</p>
-      </div>
-
-
-      <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-      <script src="static/js/bootstrap.min.js"></script>
-
-
-     </div><!-- /.container -->
-
-   <!-- Bootstrap core JavaScript
-   ================================================== -->
-   <!-- Placed at the end of the document so the pages load faster -->
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="static/js/bootstrap.min.js"></script>
-
-   </body>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+        integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+        crossorigin="anonymous"></script>
+</body>
 </html>
+
