--- a/flaskapp/flask_dealsonwheels/templates/output.html
+++ b/flaskapp/flask_dealsonwheels/templates/output.html
@@ -49,10 +49,10 @@
 
 
     <div class="starter-template">
-        <div class="row">
-        <div class="col-lg-6">
+        <div class="row justify-content-around">
+            <div class="child inline-block-child">
             
-            <img src={{url_for('static', filename=input_model_filename)}} alt="Depreciation curve" width="900" height="650" align="left">
+            <img src={{url_for('static', filename=input_model_filename)}} alt="Depreciation curve" width="900" height="700" align="left">
 
                 </table>
             </div>
